maze.lessons.maze.pledge.PledgeMaze.scala.code
def isDirectionFree(dir) {
  var directionCourante : Direction = getDirection()
  setDirection(dir)
  return ! estFaceMur()
  setDirection(directioncourante)
}